<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="erickmaeda.com.br.criptografiashash.HomeActivity"
    tools:showIn="@layout/activity_home">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtMessageToCriptography"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/default_type_message"
            android:singleLine="true"
            android:textSize="@dimen/text_view_normal" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/choose_method_encrypty"
        android:textSize="@dimen/text_view_normal" />

    <RadioGroup
        android:id="@+id/rgChooseMethod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbMD5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MD5" />

        <RadioButton
            android:id="@+id/rbSha1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SHA_1" />

        <RadioButton
            android:id="@+id/rbSha256"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SHA_256" />
    </RadioGroup>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/spacing"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:scrollbars="vertical"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardElevation="@dimen/cardview_default_elevation"
        app:cardUseCompatPadding="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvMessageEncrypted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:textSize="@dimen/text_view_normal" />
        </ScrollView>
    </android.support.v7.widget.CardView>
</LinearLayout>
